--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-
+    <section id="list"></section>
     <script src="js/app.js"></script>
   </body>
 </html>
