add sections for search bar and nav buttons

--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    <section id="list"></section>
+
+    <nav>
+      <ul>
+        <li id="all"><p>All</p></li>
+        <li id="online"><p>Online</p></li>
+        <li id="offline"><p>Offline</p></li>
+      </ul>
+    </nav>
+
+    <section id="search">
+      <input type="text" name="search" placeholder="Search" autofocus>
+    </section>
+    
+    <section id="streamers">
+      <ul id="list">
+      </ul>
+    </section>
+
     <script src="js/app.js"></script>
   </body>
 </html>
