migrate updated html

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
 
     <nav>
       <ul>
-        <li id="all"><p>All</p></li>
+        <li id="all" class="active"><p>All</p></li>
         <li id="online"><p>Online</p></li>
         <li id="offline"><p>Offline</p></li>
       </ul>
     </nav>
-
+    
+    <!--
     <section id="search">
-      <input type="text" name="search" placeholder="Search" autofocus>
-    </section>
+      <i class="fa fa-search"></i>
+      <input type="text" name="search" autofocus>
+    </section> -->
     
     <section id="streamers">
       <ul id="list">
